omnibox: tweak high contrast scheme for URL readability

The URL's contrast on the selected grey background is too low. This change
increases the brightness of the URL and darkens the background, pushing the
contrast ratio over threshold.

Bug: 870290
Change-Id: I30f40bcf85b283ee1ca6ddf82dd20e3dbeb9d91f
Reviewed-on: https://chromium-review.googlesource.com/1163731
Reviewed-by: Tommy Li <tommycli@chromium.org>
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#581203}
Former-commit-id: 1d5e2accca9df7d4a886478c273716442aad3c64